# ocl_core

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
cmake/: linux-aarch64.cmake  opencv.cmake
example/: CMakeLists.txt  build.sh  test_gaussianFilter.cpp  test_opencv.cpp  test_vecAdd.cpp
example/cmake/: opencv.cmake
kernels/: filters.cl  vecAdd.cl
opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
src/oclWrapper/: OclWrapper.cpp  OclWrapper.h
utils/: log.cpp  log.h
